--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "banking",
   "version": "0.1.0",
-  "homepage": "https://myusername.github.io/venketesh-banking",
+  "homepage": "https://Pradeep-React-Node.github.io/venketesh-banking",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,8 +15,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-      "predeploy": "npm run build",
-  "deploy": "gh-pages -b master -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
